# relevant-news

./: .gitignore  AGENTS.md  PLAN.md  README.md  SOURCES_ANALYSIS.md  _validate.py  fetcher.py  filter.py  filters.yaml  index.html  output.py  pyproject.toml  requirements.txt  run.py  sources.yaml  summarizer.py  test_summarizer_integration.py  translator.py
.pytest_cache/v/cache/: nodeids
daily-news/: 2026-06-03.html
tests/: conftest.py  test_fetcher.py  test_filter.py  test_output.py  test_run.py  test_summarizer.py  test_translator.py
