[project]
name = "relevant-news"
version = "0.1.0"
description = "Automatischer News-Aggregator — RSS → Filter → Übersetzung → Zusammenfassung → Ausgabe"
requires-python = ">=3.11"
readme = "README.md"

dependencies = [
    "feedparser>=6.0",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "pyyaml>=6.0",
    "python-telegram-bot>=21.0",
]

[project.optional-dependencies]
llm = [
    "openai>=1.0",
]

dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]
